2022-12-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-slyprocess-reuse, find-slyprocess-create): new
	functions.
	(find-slyprocess): use `find-slyprocess-reuse' and
	`find-slyprocess-create'.

2022-12-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eevtempl" (now) has subtitles.

2022-12-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eevnav" (now) has subtitles.

2022-12-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eev2020" (now) has subtitles.

2022-12-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-sh-at-dir): use `ee-expand'.

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "2022findeevangg" (now) has subtitles.

2022-12-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eev2019" (now) has subtitles.

2022-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-mpv-links): new function.

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "2021orgfornonusers" (now) has subtitles.

2022-12-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-libera-bufferp, ee-find-libera-links): new
	functions.
	(ee-fhl-main-program): added an `(:if (ee-libera-bufferp) ...)'.

2022-12-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-epackages): renamed to `find-epackages0'.
	(find-epackages): new function.
	(ee-goto-position-package, ee-packages-nline-for)
	(ee-packages-nlines-for, ee-packages-nlines-and-names): new
	functions.

	* eev-elinks.el (ee-find-epackage-links0): use the new
	`find-epackages', that has the same name as the old one but
	different arguments.

	* eev-hlinks.el (ee-packages-package-here): new function.